Combined implementation statement in editor
Display the combined implementatioin statement in the
control implementation statement editor.

Simplify the accordian header to just display component (element) name.

Move "Add component statement" to bottom of list of components.

Partially fix _smt_delete route.

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -39,6 +39,14 @@
     width: 130px;
   }
 
+  #combined_smt {
+    width: 90%;
+    margin: 12px 0 16px 0px;
+    padding: 8px;
+    border-left: 2px solid green;
+    /* display: none; */
+  }
+
 </style>
 {% endblock %}
 
@@ -145,14 +153,18 @@ Remove contextbar from top of page
       <div id="smt-block" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="">
 
         <div class="row">
-          <div id="" class="control-text"><h3>Other Implementations <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add</button></h3></div>
+          <div id="" class="control-text"><h3>Implementation Statement <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="view_combined_smt()">View combined</button></h3></div>
+          
+          <div id="combined_smt" class="control-text">{% for smt in impl_smts %}{{ smt.body }}
+
+{% endfor %}</div>{% comment %}Leave left justified for proper formatting of text{% endcomment %}
           <div id="smt-list" class="" style="width: 90%">
             {% for smt in impl_smts %}
             <div id="panel-{{ forloop.counter }}" class="panel panel-default">
               <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
                 <h4 id="panel-{{ forloop.counter }}-title" class="panel-title">
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-{{ forloop.counter }}-body">
-                    <span id="producer_element-panel_num-title">{{ smt.producer_element.name }} {{ control.id|upper }}</span> Component Implementation
+                    <span id="producer_element-panel_num-title">{{ smt.producer_element.name }}</span>
                   </a>
                 </h4>
               </div>
@@ -160,22 +172,22 @@ Remove contextbar from top of page
                 <div class="panel-body output-document">
 
               <div>
-                <form id="smt_{{ forloop.counter }}">
+                <form id="smt_{{ forloop.counter }}" class="smt_form">
                   <div class="form-group">
                     <!-- Never change name of the producer element already associated with a statement -->
-                     <input type="hidden" id="producer_element_id" name="producer_element_id" value="{{ smt.producer_element.id }}">
+                     <input type="hidden" id="producer_element_id_{{ forloop.counter }}" name="producer_element_id" value="{{ smt.producer_element.id }}">
                     <label for="compoment">Component (Producer Element)</label>
                     <div>{{ smt.producer_element.name }}</div>
-                    <input type="hidden" class="form-control" id="producer_element_name" name="producer_element_name" value="{{ smt.producer_element.name }}">
+                    <input type="hidden" class="form-control" id="producer_element_name_{{ forloop.counter }}" name="producer_element_name" value="{{ smt.producer_element.name }}">
                   </div>
                   <div class="form-group">
                     <input type="hidden" id="smt_id" name="smt_id" value="{{ smt.id }}">
                     <label for="statement">Statement</label>
-                    <textarea class="form-control" id="body" name="body" placeholder="How component contributes to control" rows="5" cols="50">{{ smt.body }}</textarea>
+                    <textarea class="form-control" id="body_{{ forloop.counter }}" name="body" placeholder="How component contributes to control" rows="5" cols="50">{{ smt.body }}</textarea>
                   </div>
                   <div class="form-group">
                     <label for="remarks">Remarks</label>
-                    <textarea class="form-control" id="remarks" name="remarks" placeholder="Add remarks for team" rows="5" cols="50">{{ smt.remarks }}</textarea>
+                    <textarea class="form-control" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" rows="5" cols="50">{{ smt.remarks }}</textarea>
                   </div>
 
                   <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
@@ -198,8 +210,8 @@ Remove contextbar from top of page
             </div>
 
             {% endfor %}
-
           </div><!--/smt-list-->
+          <div><h3><button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add component statement</button></h3></div>
         </div>
 
          <!-- <div class="row">
@@ -237,6 +249,17 @@ Remove contextbar from top of page
           $('#module_smt_editor').modal();
         }
 
+        // View combined implementation statement
+        function view_combined_smt() {
+          // Read through existing statements and combine into single statement
+          combined_smt = $( ".smt_form textarea[name=body]" ).map(function(){return this.value}).get().join("\n\n");
+
+          // Add combined statement to #combined_smt
+          $( "#combined_smt" ).html("<p>The combined implementation statement reads:</p>"+combined_smt);
+
+          // Show #combined_smt
+          $( "#combined_smt" ).toggle();
+        }
         // Adds statement form to page
         function add_smt() {
           var panel_num = $('.panel').length + 1
@@ -245,7 +268,7 @@ Remove contextbar from top of page
             <div class="panel-heading" role="tabx" id="document-panel_num-title">
               <h4 id="panel-panel_num-title" class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-panel_num-body">
-                  <span id="producer_element-panel_num-title">Other</span> {{ control.id|upper }} Component Implementation
+                  <span id="producer_element-panel_num-title">New Component Statement</span>
                 </a>
               </h4>
             </div>
@@ -372,7 +395,6 @@ Remove contextbar from top of page
                 console.log("removing from page "+'#panel-'+smt_panel_num)
                 $( '#panel-'+smt_panel_num.replace("smt_","") ).remove()
               }
-               
           }
         }
       </script>
