Fix branch tests, bump VERSION, CHANGELOG

--- a/templates/controls/detail.html
+++ b/templates/controls/detail.html
@@ -68,7 +68,7 @@ Remove contextbar from top of page
     </div>
     {% else %}
     <h2 id="control-heading" class="">
-      <small style="color: #888;">NIST SP 800-53</small><br>
+      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
       {{ control.id }}
     </h2>
     <div id="control-message">
