font-family fix: `trebuchet ms` to `"Trebuchet MS"`

--- a/templates/controls/_style-controls.html
+++ b/templates/controls/_style-controls.html
@@ -19,7 +19,7 @@
     white-space: pre-wrap;
     font-size: 12pt;
     max-width: 700px;
-    font-family: trebuchet ms, sans-serif;
+    font-family: "Trebuchet MS", sans-serif;
     /*text-align: justify;
     text-justify: inter-word;*/
   }
