More improvements to Control Editor (#840)
* New models to connect statements (controls) to elements (systems)...

...and move parser classes out of utilities and into separate file.

Create an abstract System model to represent a system. The System model
subclasses an Element and stores information about elements that are systems.

Create ElementControl model represent the selected control list for a system.
The model is called ElementControl because even systems are elements.
An ElementControl associates a control catalog id with an element. Some elements
are subclassed as systems. This allows us to apply statements to any element, including
elements that are subclassed as systems.

Create relationships between ElementControl and read-only oscal.Catalog model.
A unique "control" statement is identified by unique combination of Element, OSCAL
Control Id, and OSCAL Catalog Key.

Also put parser classes into separate file `parsers.py` and `parsers_i.py` with the
latter "*_i.py" representing a standalone version of the parser classes that do not
require GovReady Django models to run.

* WIP Get implementation statements associated with a system

* Bump version to 0.9.1.5

* Remove xlrd from controls.utilities

* Improve control index page with list of control groups

Create page listing controls in a group.

* Add Catalog index page

* Display mutiple catalogs and their controls

* Properly read impl statements from database by system

Continue developing the editor by connecting a control to
a specific system and to a set of statements. When looking
up a system control, the existing implementation statements
for that system are read from database and displayed in editor.

Provide new routes for viewing system related controls.

Modify system model to not requie FISMA Id

TODO:
- manage save/create vs edit function on existing statement

* Add controls directory to Docker build

* Support statement updates in editor


--- a/templates/controls/index-catalogs.html
+++ b/templates/controls/index-catalogs.html
@@ -28,13 +28,12 @@ Remove contextbar from top of page
     </div>
 
     <h2 id="control-heading" class="">
-      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
-      Control Groupings
+      Control Catalogs
     </h2>
     <div>
       <ul>
-      {% for group in control_groups %}
-        <li><a href="/controls/catalogs/{{ catalog.catalog_key }}/group/{{ group.id }}">{{ group.id|upper }}</a> - {{ group.title }}</li>
+      {% for catalog in catalogs.index %}
+        <li><a href="./catalogs/{{ catalog.catalog_key }}">{{ catalog.catalog_key_display }}</a> - {{ catalog.metadata.title }}</li>
       {% endfor %}
       </ul>
     </div>
