--- a/templates/controls/detail.html
+++ b/templates/controls/detail.html
@@ -48,7 +48,6 @@ Remove contextbar from top of page
 % block body-wide %
 {% block body %}
 
-
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
@@ -60,7 +59,7 @@ Remove contextbar from top of page
 
     {% if control.title is not None %}
     <h2 id="control-heading" class="">
-      <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
+      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
       {{ control.id_display|upper }} {{ control.title }}
     </h2>
     <div>
@@ -69,7 +68,7 @@ Remove contextbar from top of page
     </div>
     {% else %}
     <h2 id="control-heading" class="">
-      <small style="color: #888;">NIST SP 800-53</small><br>
+      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
       {{ control.id }}
     </h2>
     <div id="control-message">
@@ -85,7 +84,7 @@ Remove contextbar from top of page
       <script>
         function show_control_by_id() {
           var control_id = $('#control_lookup').find('input[name="id"]').val();
-          var url = "/controls/"+"800-53"+"/"+control_id+"/";
+          var url = "/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id;
           window.location.href = url;
         }
       </script>
