--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -39,6 +39,19 @@
     width: 130px;
   }
 
+  #combined_smt {
+    width: 90%;
+    margin: 12px 0 16px 0px;
+    padding: 8px;
+    border-left: 2px solid green;
+    /* display: none; */
+  }
+
+  textarea {
+    overflow-y: scroll;
+    resize: vertical;
+  }
+
 </style>
 {% endblock %}
 
@@ -56,11 +69,12 @@ Remove contextbar from top of page
         {% if control.title is not None %}
         <h2 class="control-heading" style="">
           <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
-          System Name - {{ control.id_display|upper }} {{ control.title }}
+          {{ control.id_display|upper }} {{ control.title }}<br>
+          {{ system.root_element.name }} 
         </h2>
         {% else %}
         <h2 class="control-heading" style="">
-          <small style="color: #888;">NIST SP 800-53</small><br>
+          <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
           {{ control.id }}
         </h2>
         <div id="control-message">
@@ -70,7 +84,7 @@ Remove contextbar from top of page
     </div>
     <div style="float: right; padding: 0 0.5em 0em 5em;">
         <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-          <input type="text" value="" name="id" placeholder="Enter control id"/>
+          <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
               <button type="submit" class="btn btn-success">Look up</button>
               <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="/">families</a> -->
@@ -123,11 +137,11 @@ Remove contextbar from top of page
                   </div>
                   <div class="form-group">
                     <label for="statement">Statement</label>
-                    <textarea class="form-control" id="statement" placeholder="Paste control text here" rows="5" cols="50">{{control.legacy_imp_smt}}</textarea>
+                    <textarea class="form-control" id="statement" placeholder="Place control text here" rows="8" cols="50">{{control.legacy_imp_smt}}</textarea>
                   </div>
                   <div class="form-group">
                     <label for="remarks">Remarks</label>
-                    <textarea class="form-control" id="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                    <textarea class="form-control" id="app_remarks" placeholder="Place control text here" cols="50"></textarea>
                   </div>
                 </form>
               </div>
@@ -145,10 +159,67 @@ Remove contextbar from top of page
       <div id="smt-block" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="">
 
         <div class="row">
-          <div id="" class="control-text"><h3>Other Implementations <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add</button></h3></div>
-          <div id="smt-list" class="" style="width: 90%">
+          <div id="" class="control-text"><h3>Implementation Statement <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="update_combined_smt();$( '#combined_smt' ).toggle();return false;">View combined</button></h3></div>
+          
+          <div id="combined_smt" class="control-text">The combined implementation statement reads:
 
+{% for smt in impl_smts %}{{ smt.body }}
+
+{% endfor %}</div>{% comment %}Leave left justified for proper formatting of text{% endcomment %}
+          <div id="smt-list" class="" style="width: 90%">
+            {% for smt in impl_smts %}
+            <div id="panel-{{ forloop.counter }}" class="panel panel-default">
+              <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
+                <h4 id="panel-{{ forloop.counter }}-title" class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-{{ forloop.counter }}-body">
+                    <span id="producer_element-panel_num-title">{{ smt.producer_element.name }}</span>&nbsp;...
+                  </a>
+                </h4>
+              </div>
+              <div id="document-{{ forloop.counter }}-body" class="panel-collapse collapse output-document" role="tabpanel" aria-labelledby="document-{{ forloop.counter }}-title">
+                <div class="panel-body output-document">
+
+              <div>
+                <form id="smt_{{ forloop.counter }}" class="smt_form">
+                  <div class="form-group">
+                    <!-- Never change name of the producer element already associated with a statement -->
+                     <input type="hidden" id="producer_element_id_{{ forloop.counter }}" name="producer_element_id" value="{{ smt.producer_element.id }}">
+                    <label for="compoment">Component (Producer Element)</label>
+                    <div>{{ smt.producer_element.name }}</div>
+                    <input type="hidden" class="form-control" id="producer_element_name_{{ forloop.counter }}" name="producer_element_name" value="{{ smt.producer_element.name }}">
+                  </div>
+                  <div class="form-group">
+                    <input type="hidden" id="smt_id" name="smt_id" value="{{ smt.id }}">
+                    <label for="statement">Statement</label>
+                    <textarea style="min-height:300px;overflow-y: scroll;" class="form-control" id="body_{{ forloop.counter }}" name="body" placeholder="How component contributes to control"  cols="50">{{ smt.body }}</textarea>
+                  </div>
+                  <div class="form-group">
+                    <label for="remarks">Remarks</label>
+                    <textarea style="min-height:100px; overflow-y: scroll;" class="form-control" id="remarks_{{ forloop.counter }}" name="remarks" placeholder="Add remarks for team" cols="50">{{ smt.remarks }}</textarea>
+                  </div>
+
+                  <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
+                  <input type="hidden" id="system_id" name="system_id" value="{{ system.id }}">
+                  <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
+                  <input type="hidden" id="sid_class" name="sid_class" value="800-53rev4">
+                  <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
+
+                <div class="modal-footer">
+                  <div id="success-msg-smt_{{ forloop.counter }}" style="display: inline; margin-right: 20px; color: gray;"></div>
+                  <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_{{ forloop.counter }}');return false;">Delete</button>
+                  <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false;">Save</button>
+                </div>
+
+                </form>
+              </div>
+
+                </div>
+              </div>
+            </div>
+
+            {% endfor %}
           </div><!--/smt-list-->
+          <div><h3><button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add component statement</button></h3></div>
         </div>
 
          <!-- <div class="row">
@@ -169,7 +240,7 @@ Remove contextbar from top of page
         // Submits control id for Control look up box
         function show_control_by_id() {
           var control_id = $('#control-lookup').find('input[name="id"]').val();
-          var url = "/controls/"+"800-53"+"/"+control_id+"/editor";
+          var url = "/systems/{{ system.id }}/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id+"/editor";
           window.location.href = url;
         }
       </script>
@@ -186,7 +257,15 @@ Remove contextbar from top of page
           $('#module_smt_editor').modal();
         }
 
-        // Submits control id for Control look up box
+        // View combined implementation statement
+        
+        function update_combined_smt() {
+          // Read through existing statements and combine into single statement
+          combined_smt = $( ".smt_form textarea[name=body]" ).map(function(){return this.value}).get().join("\n\n");
+          // Add combined statement to #combined_smt
+          $( "#combined_smt" ).html("<p>The combined implementation statement reads:</p><textarea style=\"border: none; min-height:300px;overflow-y: scroll;\" class=\"form-control\" cols=\"50\" onkeypress=\"$(this).keypress(function(e) {return false});\">"+combined_smt+"</textarea>");
+        }
+        // Adds statement form to page
         function add_smt() {
           var panel_num = $('.panel').length + 1
           var smt_form = `
@@ -194,7 +273,7 @@ Remove contextbar from top of page
             <div class="panel-heading" role="tabx" id="document-panel_num-title">
               <h4 id="panel-panel_num-title" class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-panel_num-body">
-                  <span id="element-panel_num-title">Other</span> {{ control.id|upper }} Component Implementation
+                  <span id="producer_element-panel_num-title">New Component Statement</span>
                 </a>
               </h4>
             </div>
@@ -202,32 +281,33 @@ Remove contextbar from top of page
               <div class="panel-body output-document">
 
             <div>
-              <form id="smt_panel_num">
+              <form id="smt_panel_num" class="smt_form">
                 <div class="form-group">
-                  <label for="compoment">Component</label>
-                  <input type="text" class="form-control" id="element" name="element" placeholder="Name of component"
-                    onchange="$('#element-panel_num-title').text($(this).val());">
+                  <input type="hidden" id="producer_element_id" name="producer_element_id" value="">
+                  <label for="compoment">Producer Component</label>
+                  <input type="text" class="form-control" id="producer_element_name" name="producer_element_name" placeholder="Name of component"
+                    onchange="$('#producer_element-panel_num-title').text($(this).val());">
                 </div>
                 <div class="form-group">
+                  <input type="hidden" id="smt_id" name="smt_id" value="">
                   <label for="statement">Statement</label>
-                  <textarea class="form-control" id="body" name="body" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                  <textarea class="form-control" id="body" name="body" placeholder="How component contributes to control" rows="5" cols="50"></textarea>
                 </div>
                 <div class="form-group">
                   <label for="remarks">Remarks</label>
-                  <textarea class="form-control" id="remarks" name="remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                  <textarea class="form-control" id="remarks" name="remarks" placeholder="Add remarks for team"  rows="4" cols="50"></textarea>
                 </div>
 
                 <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
-                <input type="hidden" id="system_id" name="system_id" value="1">
+                <input type="hidden" id="system_id" name="system_id" value="{{ system.id }}">
                 <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
                 <input type="hidden" id="sid_class" name="sid_class" value="800-53rev4">
                 <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
 
               <div class="modal-footer">
                 <div id="success-msg-smt_panel_num" style="display: inline; margin-right: 20px; color: gray;"></div>
-                <button type="button" name="submit" value="delete" class="btn btn-xs btn-danger" onclick="authoring_tool_delete_question()">Delete</button>
-                <button type="button" name="submit" value="cancel" class="btn btn-xs btn-default" data-dismiss="modal">Cancel</button>
-                <button type="submit" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_panel_num');return false">Save</button>
+                <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_panel_num');return false;">Delete</button>
+                <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_panel_num');return false;">Save</button>
               </div>
 
               </form>
@@ -237,49 +317,96 @@ Remove contextbar from top of page
             </div>
           </div>`.replace(/panel_num/g, panel_num);
           $( "#smt-list" ).append(smt_form);
-          console.log("add_smt()");
         }
-
-        function edit_smt() {
-          console.log("Edit statement - open modal");
-          show_module_smt_editor();
-        }
-      </script>
-
-      <script>
-        // Manage statement Ajax submissions
 
         function save_smt(smt_panel_num) {
           // Save a statement
-          // console.log("smt_panel_num is "+smt_panel_num);
           // serialize data from the identified statement form
-          var data = $( '#'+smt_panel_num  ).serialize()
+          var data = $( '#'+smt_panel_num ).serialize()
 
           // send data via ajax to be saved
           ajax_with_indicator({
-              url: "/controls/smt/_save/",
-              method: "POST",
-              data: data,
-              indicator_parent: $('#page-content'),
-              keep_indicator_forever: false, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
-              success: function(res) {
-                console.log('success');
-                console.log(res);
-                if (res['status'] == "success") {
-                  $('#success-msg-'+smt_panel_num).fadeIn().text('Saved');
-                } else {
-                  $('#success-msg-'+smt_panel_num).fadeIn().text('Error '+res['message']);
-                }
-                setTimeout(function() {
-                  $('#success-msg-'+smt_panel_num).fadeOut("fast");
-                }, 1000 );
+            url: "/controls/smt/_save/",
+            method: "POST",
+            data: data,
+            indicator_parent: $('#page-content'),
+            keep_indicator_forever: false, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
+            success: function(res) {
+              console.log('success');
+              console.log(res);
+              if (res['status'] == "success") {
+                // Update field values from saved
+                // Initially update a few fields
+                smt_saved = JSON.parse(res['statement']);
+                console.log("printing smt_saved");
+                console.log(smt_saved);
+                $( '#'+smt_panel_num+' input[name=smt_id]' ).val(smt_saved[0]['pk']);
+
+                // If saving first time remove producer_element_name input field
+                if ($( '#'+smt_panel_num+' input[name=producer_element_id]' ).val().length == 0) {
+                  $( '#'+smt_panel_num+' input[name=producer_element_id]' ).val(smt_saved[0]['fields']['producer_element']);
+                } 
+
+                $( '#'+smt_panel_num+' input[name=producer_element_id]' ).val(smt_saved[0]['fields']['producer_element']);
+                $('#success-msg-'+smt_panel_num).fadeIn().text('Saved');
+                // Update combined statement
+                update_combined_smt();
+              } else {
+                $('#success-msg-'+smt_panel_num).fadeIn().text('Error '+res['message']);
               }
+              setTimeout(function() {
+                $('#success-msg-'+smt_panel_num).fadeOut("fast");
+              }, 1000 );
+            }
           });
 
           // Stop <form> submit
           return false;
 
         }; // /save_smt
+
+        function delete_smt(smt_panel_num) {
+          console.log("Deleting statement button pressed "+smt_panel_num);
+          // Confirm deletion
+          var result = confirm("Delete statement?");
+          if (result) {
+              // Delete statement object in database if it exists
+              if ($( '#'+smt_panel_num+' input[name=producer_element_id]' ).val().length > 0) {
+                console.log("deleting db object")
+                // serialize data from the identified statement form
+                var data = $( '#'+smt_panel_num ).serialize()
+                // send data via ajax to delete object
+                ajax_with_indicator({
+                  url: "/controls/smt/_delete/",
+                  method: "POST",
+                  data: data,
+                  indicator_parent: $('#page-content'),
+                  keep_indicator_forever: false, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
+                  success: function(res) {
+                    console.log('success');
+                    console.log(res);
+                    if (res['status'] == "success") {
+                      // Update field values from saved
+                      // Initially update a few fields
+                      console.log("smt_deleted");
+                    }
+                    // Remove statement accordian from page
+                    console.log("removing from page "+'#panel-'+smt_panel_num)
+                    $( '#panel-'+smt_panel_num.replace("smt_","") ).remove()
+                  }
+                });
+              } else {
+                // Remove statement accordian from page
+                console.log("removing from page "+'#panel-'+smt_panel_num)
+                $( '#panel-'+smt_panel_num.replace("smt_","") ).remove()
+              }
+          }
+        }
+      </script>
+      <script>
+        $( document ).ready(function() {
+            //console.log("document ready");
+        });
 
       </script>
 
